Updates on main.css and indexEvents.html

--- a/indexEvents.html
+++ b/indexEvents.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="manifest" href="manifest.webmanifest">
 	</head>
 	<body>
 
@@ -43,7 +44,7 @@
 			<div id="main">
 
 			<!-- One -->
-				<section class="wrapper style1">
+				<section id="erstesFeld" class="wrapper style1">
 					<div class="inner">
 						<header class="align-center">
 							<h2>actuelle Events</h2>
@@ -79,7 +80,7 @@
 		
 
 			<!-- two -->
-				<section class="wrapper style1" >
+				<section id="zweitesFeld"class="wrapper style1" >
 					<div class="inner">
 						<header class="align-center">
 							<h2>all Events</h2>
