--- a/indexEvents.html
+++ b/indexEvents.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="manifest" href="manifest.webmanifest">
+		<meta name="theme-color" content="#041625">
 	</head>
 	<body>
 
@@ -140,6 +141,7 @@
 				</div>
 			</footer>
 
+		<script src="assets/js/index.js"></script><!-- essential for serviceWorker-->
 		<!-- Scripts -->
 			<!-- <script src="assets/js/jquery.min.js"></script> -->
 			<!-- <script src="assets/js/jquery.scrolly.min.js"></script> -->
