--- a/indexEvents.html
+++ b/indexEvents.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		
+		<link rel="apple-touch-icon" href="images/event.png">
 		<link rel="manifest" href="manifest.webmanifest">
 		<meta name="theme-color" content="#041625">
 	</head>
